Se modifica responsive de menu

--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -58,7 +58,7 @@
                 <span>Opciones</span>
             </div>
 
-            <div class="enlace" class="exit">
+            <div class="enlace lognup" class="exit">
                 <i class='bx bx-exit'></i>
                 <span>Salir</span>
             </div>
