--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -9,7 +9,7 @@
     --blue-bayoux-950: #080d28;
 }
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -18,14 +18,15 @@
 body {
     font-family: 'Protest Strike', sans-serif;
     color: black;
-    overflow: hidden ;
+    overflow: hidden;
 }
 
 .menu-dashboard {
-    max-width: 150px;
+    width: 150px;
     height: 100vh;
     background: #f5f8fa;
     padding: 20px;
+    position: relative;
     transition: max-width .3s ease;
     box-shadow: 2px 2px 8px 4px #d3d3d3d1;
 }
@@ -39,7 +40,7 @@ body {
 .top-menu .logo {
     display: flex;
     align-items: center;
-    
+
 }
 
 .top-menu .logo img {
@@ -67,71 +68,92 @@ body {
     font-size: 35px;
 }
 
-.menu .enlace {
-    width: 100%;
-    height: 50px;
-    padding: 20px 0 20px 17px;
-    border-radius: 8px;
+.menu {
     display: flex;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    margin-bottom: 20px;
-    cursor: pointer;
-    font-size: 16px;
-    transition: all .3s ease;
 }
 
-.menu .enlace:hover {
+.enlace {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.menu-dashboard.open .menu .enlace {
+    align-items: center;
+    border-radius: 8px;
+    display: flex;
+    cursor: pointer;
+    font-size: 16px;
+    height: 50px;
+    justify-content: left;
+    padding: 20px 0 20px 17px;
+    transition: all .6s ease;
+    width: 100%;
+}
+
+.menu .enlace:hover, .menu .enlace i:hover  {
     background: #122754;
+    border-radius: 4px;
+    color: var(--blue-bayoux-100);
 }
 
 .menu .enlace i {
-    margin-right: 20px;
-    font-size: 20px;
+    font-size: 38px;
+    padding: 8px;
+}
+
+
+.menu-dashboard.open .menu .enlace span {
+    display: block;
+}
+
+.menu-dashboard.open .menu .enlace.lognup {
+    width: 88%;
 }
 
 .menu .enlace span {
-    opacity: 0;
+    display: none;
     transition: opacity .3s ease;
 }
 
 .menu-dashboard.open {
-    max-width: 300px;
+    width: 300px;
 }
+
 
 .menu-dashboard.open .top-menu .logo span {
     display: block;
 }
 
-.menu-dashboard.open .menu .enlace {
-    padding: 20px;
+
+.enlace.lognup {
+    position: absolute;
+    bottom: 0px;
 }
 
-.menu-dashboard.open .menu .enlace span {
-    opacity: 1;
-}
+
 
 @media only screen and (max-width: 600px) {
 
     .menu {
-        display: flex;
-        flex-direction: column;
+        display: block;
     }
 
     .menu .enlace {
         display: flex;
     }
 
-    .menu .enlace span {
+    .menu .enlace i,
+    span {
         opacity: 0;
-        transition: opacity .3s ease;
-    }
-    
-    .menu-dashboard.open {
-        max-height: 100%;
     }
 
+
     .menu-dashboard {
-        max-width: 100%;
+        width: 100%;
         height: 100px;
         flex-direction: column;
     }
@@ -142,17 +164,31 @@ body {
     }
 
     .menu-dashboard.open {
-        max-width: none;
+        height: auto;
+        width: 100%;
     }
+
 
     .menu-dashboard.open .menu .enlace {
         height: 100%;
-        padding: 15px 0;
+        padding: 2px 0;
         text-align: center;
     }
 
     .menu-dashboard.open .menu .enlace i {
+        font-size: 24px;
         margin-right: 0;
-        margin-left: 20px;
+        opacity: 1;
+
     }
+
+    .menu-dashboard.open .menu .enlace span {
+        opacity: 1;
+
+    }
+
+    .enlace.lognup {
+        position: relative;
+    }
+    
 }
