--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -15,57 +15,60 @@
     
 </head>
 <body>
-
-    <div class="menu-dashboard">
-        <div class="top-menu">
-            <div class="logo">
-                <img src="/img/company_51033039_logo.jpg" alt="">
-                <span>Colvatel</span>
+    <div class="containertarifador">
+        <div class="menu-dashboard">
+            <div class="top-menu">
+                <div class="logo">
+                    <img src="/img/company_51033039_logo.jpg" alt="">
+                    <span>Colvatel</span>
+                </div>
+                <div class="toggle">
+                    <i class='bx bx-menu'></i>
+                </div>
             </div>
-            <div class="toggle">
-                <i class='bx bx-menu'></i>
-            </div>
-        </div>
-        <hr>
-        <div class="menu">
-            <div class="enlace">
-                <i class="bx bx-grid-alt"></i>
-                <span>Dashboard</span>
-            </div>
-
-            <div class="enlace">
-                <i class="bx bx-user"></i>
-                <span>Gestión de Usuarios</span>
-            </div>
-
-            <div class="enlace">
-                <i class="bx bx-file-blank"></i>
-                <span>Tarificador segun RR.HH.</span>
-            </div>
-
-            <div class="enlace">
-                <i class="bx bx-file-blank"></i>
-                <span>Tarificador según días</span>
-            </div>
-
-            <div class="enlace">
-                <i class="bx bx-file-blank"></i>
-                <span>Tarificador TRD</span>
-            </div>
-
-            <div class="enlace">
-                <i class="bx bx-cog"></i>
-                <span>Opciones</span>
-            </div>
-
-            <div class="enlace lognup" class="exit">
-                <i class='bx bx-exit'></i>
-                <span>Salir</span>
-            </div>
-            
-
-        </div>
-    </div>
+            <hr>
+            <div class="menu">
+                <div class="enlace">
+                    <i class="bx bx-grid-alt"></i>
+                    <span>Dashboard</span>
+                </div>
     
+                <div class="enlace">
+                    <i class="bx bx-user"></i>
+                    <span>Gestión de Usuarios</span>
+                </div>
+    
+                <div class="enlace">
+                    <i class="bx bx-file-blank"></i>
+                    <span>Tarificador segun RR.HH.</span>
+                </div>
+    
+                <div class="enlace">
+                    <i class="bx bx-file-blank"></i>
+                    <span>Tarificador según días</span>
+                </div>
+    
+                <div class="enlace">
+                    <i class="bx bx-file-blank"></i>
+                    <span>Tarificador TRD</span>
+                </div>
+    
+                <div class="enlace">
+                    <i class="bx bx-cog"></i>
+                    <span>Opciones</span>
+                </div>
+    
+                <div class="enlace lognup" class="exit">
+                    <i class='bx bx-exit'></i>
+                    <span>Salir</span>
+                </div>
+                
+    
+            </div>
+        </div>
+        <div class="contdatos">
+            <h1>oscar</h1>
+        </div>
+    </div> 
 </body>
 </html>
