--- a/css/recuperacion.css
+++ b/css/recuperacion.css
@@ -11,7 +11,7 @@
 
 /* Estilos generales */
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Protest Strike', sans-serif;
     background-color: var(--blue-bayoux-50);
     margin: 0;
     padding: 0;
@@ -23,7 +23,6 @@ body {
 
 .container {
     width: 400px;
-    background: #fff;
     padding: 30px;
     border-radius: 8px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
