--- a/views/gestion_user.html
+++ b/views/gestion_user.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gestión de Usuarios</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="/css/prueva.css">
+    <link rel="stylesheet" href="/css/gestion_user.css">
 </head>
 <body>
     <div class="contenedor">
@@ -36,7 +36,7 @@
         <div class="pagination">
             <button class="anterior"><i class='bx bx-chevron-left'></i>Anterior</button>
             <span class="pagina-inf">Página 1 de 3</span>
-            <button class="siguente">Siguiente<i class='bx bx-chevron-right'></i></button>
+            <button class="siguiente">Siguiente<i class='bx bx-chevron-right'></i></button>
         </div>
         <div class="add-user">
             <button class="add-user-btn"><i class='bx bx-user'></i>Añadir Usuario</button>
