--- a/views/gestion_user.html
+++ b/views/gestion_user.html
@@ -6,6 +6,10 @@
     <title>Gestión de Usuarios</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="/css/gestion_user.css">
+    <!-- libreria de google -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Protest+Strike&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="contenedor">
@@ -24,6 +28,113 @@
                 </tr>
             </thead>
             <tbody>
+                <tr>
+                    <td>Nombre del Usuario</td>
+                    <td>Contraseña</td>
+                    <td>Activo</td>
+                    <td>
+                        <button class="eliminar"><i class='bx bx-trash'></i>Eliminar</button>
+                        <button class="modificar"><i class='bx bx-edit'></i>Modificar</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Nombre del Usuario</td>
+                    <td>Contraseña</td>
+                    <td>Activo</td>
+                    <td>
+                        <button class="eliminar"><i class='bx bx-trash'></i>Eliminar</button>
+                        <button class="modificar"><i class='bx bx-edit'></i>Modificar</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Nombre del Usuario</td>
+                    <td>Contraseña</td>
+                    <td>Activo</td>
+                    <td>
+                        <button class="eliminar"><i class='bx bx-trash'></i>Eliminar</button>
+                        <button class="modificar"><i class='bx bx-edit'></i>Modificar</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Nombre del Usuario</td>
+                    <td>Contraseña</td>
+                    <td>Activo</td>
+                    <td>
+                        <button class="eliminar"><i class='bx bx-trash'></i>Eliminar</button>
+                        <button class="modificar"><i class='bx bx-edit'></i>Modificar</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Nombre del Usuario</td>
+                    <td>Contraseña</td>
+                    <td>Activo</td>
+                    <td>
+                        <button class="eliminar"><i class='bx bx-trash'></i>Eliminar</button>
+                        <button class="modificar"><i class='bx bx-edit'></i>Modificar</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Nombre del Usuario</td>
+                    <td>Contraseña</td>
+                    <td>Activo</td>
+                    <td>
+                        <button class="eliminar"><i class='bx bx-trash'></i>Eliminar</button>
+                        <button class="modificar"><i class='bx bx-edit'></i>Modificar</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Nombre del Usuario</td>
+                    <td>Contraseña</td>
+                    <td>Activo</td>
+                    <td>
+                        <button class="eliminar"><i class='bx bx-trash'></i>Eliminar</button>
+                        <button class="modificar"><i class='bx bx-edit'></i>Modificar</button>
+                    </td>
+                </tr><tr>
+                    <td>Nombre del Usuario</td>
+                    <td>Contraseña</td>
+                    <td>Activo</td>
+                    <td>
+                        <button class="eliminar"><i class='bx bx-trash'></i>Eliminar</button>
+                        <button class="modificar"><i class='bx bx-edit'></i>Modificar</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Nombre del Usuario</td>
+                    <td>Contraseña</td>
+                    <td>Activo</td>
+                    <td>
+                        <button class="eliminar"><i class='bx bx-trash'></i>Eliminar</button>
+                        <button class="modificar"><i class='bx bx-edit'></i>Modificar</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Nombre del Usuario</td>
+                    <td>Contraseña</td>
+                    <td>Activo</td>
+                    <td>
+                        <button class="eliminar"><i class='bx bx-trash'></i>Eliminar</button>
+                        <button class="modificar"><i class='bx bx-edit'></i>Modificar</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Nombre del Usuario</td>
+                    <td>Contraseña</td>
+                    <td>Activo</td>
+                    <td>
+                        <button class="eliminar"><i class='bx bx-trash'></i>Eliminar</button>
+                        <button class="modificar"><i class='bx bx-edit'></i>Modificar</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Nombre del Usuario</td>
+                    <td>Contraseña</td>
+                    <td>Activo</td>
+                    <td>
+                        <button class="eliminar"><i class='bx bx-trash'></i>Eliminar</button>
+                        <button class="modificar"><i class='bx bx-edit'></i>Modificar</button>
+                    </td>
+                </tr>
                 <tr>
                     <td>Nombre del Usuario</td>
                     <td>Contraseña</td>
@@ -69,7 +180,7 @@
                     <option value="inactivo">Inactivo</option>
                 </select>
                 <div class="modal-botones">
-                    <button class="cancelar">Cancelar</button>
+                    <button class="cancelar_md">Cancelar</button>
                     <button class="guardar-modificacion">Guardar</button>
                 </div>
             </form>
