--- a/css/login.css
+++ b/css/login.css
@@ -93,12 +93,15 @@ body{
     height: 50px;
     margin-top: 30px;
     width: 100%;
+    border: 1px solid #ddd;
+    border-radius: 6px;
+    width: 100%;
 }
+
 
 .input-field input{
     border-bottom: 2px solid #ccc;
     border-top: 2px solid transparent;
-    position: absolute;
     height: 100%;
     border: none;
     padding: 0 35px;
