--- a/css/recursos_humanos.css
+++ b/css/recursos_humanos.css
@@ -1,5 +1,4 @@
 :root {
-    --primary: #0b3d93;
     --blue-bayoux-50: #f5f8fa;
     --blue-bayoux-100: #e9eff5;
     --blue-bayoux-200: #cfdde8;
@@ -22,10 +21,12 @@ body {
     justify-content: center;
     padding: 20px;
     background-color: var(--blue-bayoux-100);
+    font-family: 'Poppins', sans-serif;
+    font-size: 14px;
 }
 
 h1{
-    color: blue;
+    color: black;
     text-align: center;
     font-family: "Protest Strike", sans-serif;
     font-style: normal;
@@ -39,6 +40,9 @@ label{
     width: 100%;
     padding: 8px;
     margin-top: 4PX;
+    outline: none;
+    border: 1px solid #ddd;
+    border-radius: 6px;
 }
 
 .selectCantidad {
@@ -47,14 +51,16 @@ label{
 
 
 .container {
-
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     position: relative;
-    max-width: 700px;
+    max-width: 600px;
     width: 100%;
     background: #fff;
     padding: 25px;
     border-radius: 8px;
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 .container header {
@@ -66,9 +72,13 @@ label{
 
 .container .form {
     margin-top: 30px;
+    width: 60%;
+
 }
 
 .form .input-box {
+    display: flex;
+    flex-direction: column;
     margin-top: 10px;
 }
 
@@ -86,6 +96,8 @@ label{
     border: 1px solid #ddd;
     border-radius: 6px;
     padding: 0 15px;
+    width: 100%;
+    font-size: 14px;
 }
 
 .input-box input:focus {
@@ -120,7 +132,7 @@ label{
 }
 
 .gender input {
-    accent-color: blue;
+    accent-color: var(--blue-bayoux-700);
 }
 
 .form :where(.gender input, .gender label) {
@@ -154,19 +166,37 @@ label{
     border: none;
     cursor: pointer;
     transition: all 0.2s ease;
-    background:blue;
+    background: var(--blue-bayoux-700);
 }
 
 .form button:hover {
-    background: blue;
+    background: var(--blue-bayoux-700);
 }
 
-@media screen and (max-width: 500px) {
-.form .column {
-    flex-wrap: wrap;
+@media screen and (max-width: 768px) {
+.container .form  {
+    width: 80%;
+    font-size: 10px;
+}
+.form :where(.input-box input, .select-box){
+    font-size: 10px;
+    height: 30px;
+}
+h3{
+    font-size: 10px;
+}
 }
 
-.form :where(.gender-option, .gender) {
-    row-gap: 15px;
+@media screen and (max-width: 400px) {
+    .container .form  {
+        width: 70%;
+        font-size: 7px;
+}
+.form :where(.input-box input, .select-box){
+    font-size: 7px;
+    height: 30px;
+}
+h3{
+    font-size: 10px;
 }
 }
