--- a/views/login.html
+++ b/views/login.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
-    <link rel="stylesheet" href="css/ingreso_iconos.css">
+    <link rel="stylesheet" href="../css/login.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Protest+Strike&display=swap" rel="stylesheet">
@@ -40,7 +40,7 @@
         <div class="checkbox-text">
             <a href="#" class="text">Recuperar Contraseña</a>
         </div>
-        <div class="input-field button">
+        <div class="input-field  button">
             <input type="button" value="Ingresar">
         </div>
         </form>
