--- a/views/recursos_humanos.html
+++ b/views/recursos_humanos.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="css/recursos_humanos.css">
+    <link rel="stylesheet" href="../css/recursos_humanos.css">
     <!--Link de letra-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Protest+Strike&display=swap" rel="stylesheet">
+    <title>Recursos Humanos</title>
 </head>
 <body>
 <section class="container">
@@ -38,24 +39,18 @@
             <label>UNIDAD  MEDIA   :</label>
             <input type="text" class="selectCantidad" placeholder="Ingreso el numero de procesos" required />
         </div>
-        <div class="gender-box">
-            <h3>LUGAR  DE  EJECUCIÓN:</h3>
-            <div class="gender-option">
-                <div class="gender">
-                    <input type="radio" id="check-male" name="gender" checked />
-                    <label for="check-male">Lugar 1</label>
-                </div>
-                <div class="gender">
-                    <input type="radio" id="check-female" name="gender" />
-                    <label for="check-female">Lugar 2</label>
-                </div>
-                <div class="gender">
-                    <input type="radio" id="check-female" name="gender" />
-                    <label for="check-female">Lugar 2</label>
-                </div>
-            </div>
+        <div class="input-box">
+            <label for="opciones">LUGAR DE EJECUCIÓN:</label>
+            <select id="opciones" class="selectProceso" name="opciones" required>
+                <option value="opcion1"></option>
+                <option value="opcion1">Opción 1</option>
+                <option value="opcion2">Opción 2</option>
+                <option value="opcion3">Opción 3</option>
+                <option value="opcion2">Opción 4</option>
+                <option value="opcion3">Opción 5</option>
+            </select>
         </div>
-        <button>Submit</button>    
+        <button>CALCULAR</button>    
     </form>
 </section>
 </body>
